# vlmrun-hub

./: .env.template  .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  PR_DESCRIPTION.md  README.md  pyproject.toml  requirements.txt  sample_bank_check.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yaml  documentation.yaml  feature_request.md  schema-request.yaml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md  schema-request.yaml
.github/workflows/: ci.yml  python-publish.yml
cookbook/: 00_quickstart.ipynb  02_case_study_drivers_license.ipynb  README.md
docs/: CONTRIBUTING-SCHEMA.md  CONTRIBUTING.md  RELEASE.md  SCHEMA-GUIDELINES.md  catalog-spec.yaml
hub/schemas/healthcare/: medical_insurance_card.py  patient_intake.py
makefiles/: Makefile.admin.mk
requirements/: requirements.build.txt  requirements.extra.txt  requirements.server.txt  requirements.test.txt  requirements.txt
schemas/aerospace/: remote_sensing.py  satellite_imagery_analysis.py
schemas/banking/: document_verification.py
schemas/document/: id_extraction.py  invoice.py  presentation.py
schemas/finance/: earnings_call.py  news_cataloging.py
schemas/healthcare/: patient_intake.py
schemas/media/: ad_intelligence.py  nba_game_state.py  sports_nba_caption.py  tv_caption.py
schemas/retail/: ecommerce_product_caption.py
scripts/: bump_version.py
tests/: conftest.py  test_catalog.py  test_dataset.py  test_imports.py  test_instructor.py  test_ollama.py  test_openai.py  test_registry.py  test_server.py  test_urls.py  test_utils.py  test_vllm.py  test_vlmrun.py
tests/benchmarks/: 2025-01-05-gpt-4o-mini-2024-07-18-instructor-results.html  2025-01-06-gpt-4o-mini-2024-07-18-instructor-results.md  2025-01-09-gpt-4o-2024-11-20-instructor-results.md  2025-01-09-gpt-4o-mini-2024-07-18-instructor-results.md  2025-01-10-gemini-2.0-flash-exp-instructor-results.md  2025-01-10-gpt-4o-2024-11-20-instructor-results.md  2025-01-10-gpt-4o-mini-2024-07-18-instructor-results.md  2025-01-10-llama3.2-vision-11b-instructor-results.md  2025-01-11-phi4-instructor-results.md  2025-02-20-bsahane-Qwen2.5-VL-7B-Instruct-Q4_K_M_benxh-instructor-results.md  2025-02-20-bsahane-Qwen2.5-VL-7B-Instruct-Q4_K_M_benxh-ollama-results.md  2025-02-20-bsahane-Qwen2.5-VL-7B-Instruct:Q4_K_M_benxh-instructor-results.md
tests/hub/schemas/: test_aerospace.py  test_banking.py  test_media.py
vlmrun/: __init__.py
vlmrun/hub/: __init__.py  catalog.yaml  constants.py  dataset.py  full-catalog.yaml  registry.py  utils.py  version.py
vlmrun/hub/schemas/: __init__.py
vlmrun/hub/schemas/accounting/: form_playslip.py
vlmrun/hub/schemas/aerospace/: __init__.py  remote_sensing.py
vlmrun/hub/schemas/contrib/: __init__.py  catalog.yaml
vlmrun/hub/schemas/contrib/accounting/: form_1040_tax_statement.py  form_payslip.py
vlmrun/hub/schemas/contrib/banking/: document_verification.py
vlmrun/hub/schemas/contrib/document/: __init__.py  automobile_insurance.py  bank_check.py  business_card.py  form_work_order.py  insurance_claim.py  legal_claim.py  mortgage_application.py  reference_letter.py  request_for_proposal.py  us_number_plate.py  us_passport.py  w2_form.py
vlmrun/hub/schemas/contrib/document/india/: aadhaar_card.py  pan_card.py
vlmrun/hub/schemas/contrib/finance/: balance_sheet.py
vlmrun/hub/schemas/contrib/food/: __init__.py  nutrition_facts_label.py
vlmrun/hub/schemas/contrib/healthcare/: pathology_report.py  prior_authorization.py
vlmrun/hub/schemas/contrib/logistics/: bill_of_lading.py
vlmrun/hub/schemas/contrib/media/: nba_game_state.py  nfl_game_state.py  tv-news.py  tv_news.py
vlmrun/hub/schemas/contrib/real_estate/: lease_agreement.py
vlmrun/hub/schemas/contrib/retail/: ecommerce_product_caption.py
vlmrun/hub/schemas/contrib/social/: twitter_card.py
vlmrun/hub/schemas/document/: __init__.py  bank_statement.py  id_extraction.py  invoice.py  presentation.py  receipt.py  resume.py  us_drivers_license.py  utility_bill.py  w2_form.py
vlmrun/hub/schemas/healthcare/: __init__.py  hipaa_release.py  medical_insurance_card.py  medicare_claim.py  patient_intake.py
vlmrun/hub/schemas/media/: __init__.py  nba_game_state.py  nfl_game_state.py  tv_news.py
vlmrun/hub/schemas/retail/: __init__.py  ecommerce_product_caption.py  product_catalog.py
vlmrun/hub/server/: README.md  app.py  routes.py
