[build-system]
requires = ["setuptools>=40.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vlmrun-hub"
description = "VLM Run Hub for various industry-specific schemas"
authors = [{name = "VLM Support", email = "support@vlm.com"}]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research","Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
license = {file = "LICENSE"}
dynamic = ["version", "dependencies"]

[project.urls]
homepage = "https://github.com/vlm-run/vlmrun-hub"
repository = "https://github.com/vlm-run/vlmrun-hub"
documentation = "https://docs.vlm.run/hub"

[project.optional-dependencies]
test = ["pytest"]
build = ["twine", "build"]

[tool.setuptools.dynamic]
version = {attr = "vlmrun.hub.version.__version__"}
dependencies = {file = ["requirements/requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
test = {file = ["requirements/requirements.test.txt"]}

[tool.setuptools.packages.find]
where = ["."]
include = ["vlmrun.hub"]
